# library name
set(LIBNAME "milkOpticsMaterials")
set(SRCNAME "OpticsMaterials")


set(SOURCEFILES
	${SRCNAME}.c
	OpticsMaterials_n.c
	OpticsMaterials_n.h
)

set(INCLUDEFILES
	${SRCNAME}.h
)


set(SCRIPTS
)

set(LINKLIBS
	CLIcore
	milkimagegen
)



# DEFAULT SETTINGS
# Do not change unless needed
# =====================================================================

project(lib_${LIBNAME}_project)

include_directories ("${PROJECT_SOURCE_DIR}/src")
include_directories ("${PROJECT_SOURCE_DIR}/..")

# Library can be compiled from multiple source files
# Convention: the main souce file is named <libname>.c
#
add_library(${LIBNAME} SHARED ${SOURCEFILES})

target_include_directories(${LIBNAME} PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}/..
	${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(${LIBNAME} PRIVATE ${LINKLIBS})

install(TARGETS ${LIBNAME} DESTINATION lib)
install(FILES ${INCLUDEFILES} DESTINATION include/${SRCNAME})

install(PROGRAMS ${SCRIPTS} DESTINATION bin)
